Fixed 'a small' from overlapping link

--- a/src/sass/_basic.scss
+++ b/src/sass/_basic.scss
@@ -44,7 +44,6 @@ a {
 a small {
   font-size: 11px;
   color: #777;
-  margin-top: -.6em;
   display: block;
 }
 
